--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
               <li><a class="dropdown-item" href="#">Technology</a></li>
               <li><a class="dropdown-item" href="#">youtube channel</a></li>
-              <li><a class="dropdown-item" href="#">Hacking</a></li>
+              <li><a class="dropdown-item" href="https://github.com/nyapu/c-program-with-sameer">Hacking</a></li>
               <li><a class="dropdown-item" href="#">Dark Web</a></li>
               <li><a class="dropdown-item" href="gelocation.html"> Location</a></li>
               <li>
